--- a/Aula Pratica/index.html
+++ b/Aula Pratica/index.html
@@ -16,9 +16,25 @@
          <a href="https://pt.wikipedia.org/wiki/Anime" a> Mais Informações aqui</a>
          <hr>
         </p>
-</section>
- <footer>
-    <p>Desenvolvido por Gustavo Alves</p>
+        <figure>
+            <img src="Goku vs Vegeta.jpg" alt="Primeira luta entre Goku e Vegeta"
+            width="200px">
+            <figcaption>Uma das melhores lutas de Dragon Ball Z</figcaption>
+         </figure>
+         <figure>
+            <img src="Rock Lee Vs Gaara.jpg" alt="Luta entre rock lee e gaara"
+            width="300px">
+            <figcaption>A luta mais marcante de Naruto Classico</figcaption>
+         </figure>
+         <figure>
+            <img src="ichigo vs ulquiorra.jpg" alt="Luta entre Ichigo e Ulquiorra"
+            width="200px">
+            <figcaption>Melhor transformação de Hollow</figcaption>
+         </figure>
+        
+        </section>
+<footer>
+<p>Desenvolvido por Gustavo Alves</p>
 </footer>   
 </body>
 </html>
