--- a/AulaPratica/index.html
+++ b/AulaPratica/index.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Um Universso chamado anime</title>
 </head>
+
 <body>
     <header>
-    <h1>Vamos falar de animes ?</h1>
+        <h1>Vamos falar de animes ?</h1>
     </header>
     <section>
         <h2>Pirmeiras impressões</h2>
-        <p>Anime é o nome que se dá às animações japonesas, geralmente desenhadas à mão, e produzidas como séries. A maioria dos animes conta com um número extenso de episódios, mas sua duração é bem mais curta: são raros os casos nos quais um episódio passa dos trinta minutos.
-         <br><br>
-         <a href="https://pt.wikipedia.org/wiki/Anime" a> Mais Informações aqui</a>
-         <hr>
+        <p>Anime é o nome que se dá às animações japonesas, geralmente desenhadas à mão, e produzidas como séries. A
+            maioria dos animes conta com um número extenso de episódios, mas sua duração é bem mais curta: são raros os
+            casos nos quais um episódio passa dos trinta minutos.
+            <br><br>
+            <a href="https://pt.wikipedia.org/wiki/Anime" a> Mais Informações aqui</a>
+            <hr>
         </p>
         <figure>
-            <img src="Goku vs Vegeta.jpg" alt="Primeira luta entre Goku e Vegeta"
-            width="200px">
+            <img src="Goku vs Vegeta.jpg" alt="Primeira luta entre Goku e Vegeta" width="200px">
             <figcaption>Uma das melhores lutas de Dragon Ball Z</figcaption>
-         </figure>
-         <figure>
-            <img src="Rock Lee Vs Gaara.jpg" alt="Luta entre rock lee e gaara"
-            width="300px">
+        </figure>
+        <figure>
+            <img src="Rock Lee Vs Gaara.jpg" alt="Luta entre rock lee e gaara" width="300px">
             <figcaption>A luta mais marcante de Naruto Classico</figcaption>
-         </figure>
-         <figure>
-            <img src="ichigo vs ulquiorra.jpg" alt="Luta entre Ichigo e Ulquiorra"
-            width="200px">
+        </figure>
+        <figure>
+            <img src="ichigo vs ulquiorra.jpg" alt="Luta entre Ichigo e Ulquiorra" width="300px">
             <figcaption>Melhor transformação de Hollow</figcaption>
-         </figure>
-        
-        </section>
-<footer>
-<p>Desenvolvido por Gustavo Alves</p>
-</footer>   
+        </figure>
+    </section>
+    <video controls width="500px">
+        <source src="Goku vs Vegeta amv tipo 1.mp4">
+    </video>
+    <footer>
+        <p>Desenvolvido por Gustavo Alves</p>
+    </footer>
 </body>
+
 </html>
