--- a/AulaPratica/index.html
+++ b/AulaPratica/index.html
@@ -34,8 +34,51 @@
         </figure>
     </section>
     <video controls width="500px">
-        <source src="Goku vs Vegeta amv tipo 1.mp4">
+        <source src="Goku vs Vegeta amv tipo 1.mp4" type="video/mp4"> 
     </video>
+    <section>
+        <h2>Lista de Animes</h2>
+        <p>Veja o número de episódios dublados e legendados</p>
+        <table border>
+            <caption>Descrição da quantidade de episódios dublados e legendados</caption>
+            <thead>
+            <tr>
+                <th>
+                    Animes Dublados
+                </th>
+                <th>
+                    Animes Legendados
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    Dragon Ball Z (291)
+                </td>
+                <td>
+                    Dragon Ball Z (291)
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Naruto Classico (220)
+                </td>
+                <td>
+                    Naruto Classico (220)
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Bleach (229)
+                </td>
+                <td>
+                    Bleach (366)
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </section>
     <footer>
         <p>Desenvolvido por Gustavo Alves</p>
     </footer>
