--- a/AulaPratica/index.html
+++ b/AulaPratica/index.html
@@ -34,9 +34,10 @@
         </figure>
     </section>
     <video controls width="500px">
-        <source src="Goku vs Vegeta amv tipo 1.mp4" type="video/mp4"> 
-    </video>
-    <section>
+        <source src="Goku vs Vegeta amv tipo 1.mp4" type="video/mp4">
+        Seu navegador não suporta o video. <a href="Goku vs Vegeta amv tipo 1.mp4">Clique aqui para baixar</a> 
+     </video>
+     <section>
         <h2>Lista de Animes</h2>
         <p>Veja o número de episódios dublados e legendados</p>
         <table border>
@@ -78,6 +79,35 @@
             </tr>
             </tbody>
         </table>
+    </section>
+    <section>
+        <h4></h4>
+        <form method="get" action="">
+            <fieldset>
+                <legend>Dados De Contato</legend>
+                <label>Nome</label><br>
+                <input type="text" name="nome"><br>
+                <label>Email</label> <br>
+                <input type="email" name="email"><br>
+                <label>Data Que Assistiu</label><br>
+                <input type="date"><br>
+            </fieldset>
+            <fieldset>
+                <legend>Teve Problema Com Quais Episodios - Marque e informe o numero</legend>
+                 <label>
+                <input type="checkbox" name="dragonballz" value="Dragon Ball Z">Dragon Ball Z
+                 </label>
+                 <label>
+                    <input type="checkbox" name="narutoclassico" value="Naruto Classico">Naruto Classico
+                 </label>
+                 <label>
+                    <input type="checkbox" name="Bleach" value="Bleach">Bleach
+                 </label> 
+            </fieldset>
+            <label>Comentario</label><br>
+            <textarea name="comentario"rows="1"></textarea><br><br>
+            <button>Salvar</button><br>
+        </form>
     </section>
     <footer>
         <p>Desenvolvido por Gustavo Alves</p>
