--- a/AulaPratica/index.html
+++ b/AulaPratica/index.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Um Universso chamado anime</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="#">Pagina Inicial</a></li>
+                <li><a href="#">Lista de Animes</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
         <h1>Vamos falar de animes ?</h1>
     </header>
     <section>
