--- a/AulaPratica/index.html
+++ b/AulaPratica/index.html
@@ -18,7 +18,7 @@
         </nav>
         <h1>Vamos falar de animes ?</h1>
     </header>
-    <section>
+    <section id="impressões">
         <h2>Pirmeiras impressões</h2>
         <p>Anime é o nome que se dá às animações japonesas, geralmente desenhadas à mão, e produzidas como séries. A
             maioria dos animes conta com um número extenso de episódios, mas sua duração é bem mais curta: são raros os
@@ -27,23 +27,29 @@
             <a href="https://pt.wikipedia.org/wiki/Anime" a> Mais Informações aqui</a>
             <hr>
         </p>
+        <div class="figure">
         <figure>
-            <img src="Goku vs Vegeta.jpg" alt="Primeira luta entre Goku e Vegeta" width="200px">
+            <img src="goku vs vegeta.jpg" alt="Primeira luta entre Goku e Vegeta" width="300px">
             <figcaption>Uma das melhores lutas de Dragon Ball Z</figcaption>
         </figure>
         <figure>
-            <img src="Rock Lee Vs Gaara.jpg" alt="Luta entre rock lee e gaara" width="300px">
+            <img src="Rock Lee Vs Gaara.jpg" alt="Luta entre rock lee e gaara" width="250px">
             <figcaption>A luta mais marcante de Naruto Classico</figcaption>
         </figure>
         <figure>
-            <img src="ichigo vs ulquiorra.jpg" alt="Luta entre Ichigo e Ulquiorra" width="300px">
+            <img src="ichigo vs ulquiorra.jpg" alt="Luta entre Ichigo e Ulquiorra" width="250px">
             <figcaption>Melhor transformação de Hollow</figcaption>
         </figure>
+        </div>
+        <div class="video">
+        <video controls width="500px">
+            <source src="Batalhas epicas dos anime AMV.webm" type="video/webm"> 
+            <source src="Batalhas epicas dos anime amv android.mp4" type="video/mp4">
+            <source src="Batalhas epicas dos anime amv ios.mp4" type="video/mp4">
+            Seu navegador não suporta o video. <a href="Batalhas epicas dos anime AMV.webm"></a>
+        </video>
+        </div>
     </section>
-    <video controls width="500px">
-        <source src="Goku vs Vegeta amv tipo 1.mp4" type="video/mp4">
-        Seu navegador não suporta o video. <a href="Goku vs Vegeta amv tipo 1.mp4">Clique aqui para baixar</a> 
-     </video>
      <section>
         <h2>Lista de Animes</h2>
         <p>Veja o número de episódios dublados e legendados</p>
