--- a/AulaPratica/index.html
+++ b/AulaPratica/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Um Universso chamado anime</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,17 +29,17 @@
             <a href="https://pt.wikipedia.org/wiki/Anime" a> Mais Informações aqui</a>
             <hr>
         </p>
-        <div class="figure">
-        <figure>
+        <div class="row">
+        <figure class="col text-center">
             <img src="goku vs vegeta.jpg" alt="Primeira luta entre Goku e Vegeta" width="300px">
             <figcaption>Uma das melhores lutas de Dragon Ball Z</figcaption>
         </figure>
-        <figure>
-            <img src="Rock Lee Vs Gaara.jpg" alt="Luta entre rock lee e gaara" width="250px">
+        <figure class="col text-center">
+            <img src="Rock Lee Vs Gaara.jpg" alt="Luta entre rock lee e gaara" width="300px">
             <figcaption>A luta mais marcante de Naruto Classico</figcaption>
         </figure>
-        <figure>
-            <img src="ichigo vs ulquiorra.jpg" alt="Luta entre Ichigo e Ulquiorra" width="250px">
+        <figure class="col text-center">
+            <img src="ichigo vs ulquiorra.jpg" alt="Luta entre Ichigo e Ulquiorra" width="300px">
             <figcaption>Melhor transformação de Hollow</figcaption>
         </figure>
         </div>
@@ -125,6 +127,9 @@
     <footer>
         <p>Desenvolvido por Gustavo Alves</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
