--- a/AulaPratica/index.html
+++ b/AulaPratica/index.html
@@ -4,39 +4,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Um Universso chamado anime</title>
+    <title>Um Universo chamado anime</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="container-fluid p-2 bg-yeallow text-center">
-        <nav class="navbar navbar-expand-lg bg-body-dark">
-            <div class="container-fluid">
+    <header class="container-fluid p-2 text-center">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid bg-danger">
                 <a class="navbar-brand" href="#">Animes</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end bg-yeallow" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Animes Legendados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Animes Dublados</a>
+                            <a class="nav-link active" aria-current="page" href="#">Animes Dublados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contato</a>
+                            <a class="nav-link active" aria-current="page" href="#">Contato</a>
                         </li>
                     </ul>
                 </div>
-            </div>
         </nav>
-        <h1>Vamos falar de animes ?</h1>
-    </header>
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="dragon ball z.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Dragon Ball Z</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="naruto classico.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Naruto Classico</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="bleach.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Bleach</h5>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     <section class="container-fluid text-center">
-        <h2>Pirmeiras impressões</h2>
+        <h2>Primeiras impressões</h2>
         <p>Anime é o nome que se dá às animações japonesas, geralmente desenhadas à mão, e produzidas como séries. A
             maioria dos animes conta com um número extenso de episódios, mas sua duração é bem mais curta: são raros os
             casos nos quais um episódio passa dos trinta minutos.
@@ -48,14 +83,21 @@
         <figure class="col text-center">
             <img src="goku vs vegeta.jpg" alt="Primeira luta entre Goku e Vegeta" width="300px">
             <figcaption>Uma das melhores lutas de Dragon Ball Z</figcaption>
+            <a href="https://www.youtube.com/watch?v=yWgWhuN8wc4"><button type="button" class="btn">Abertura Dublada</button></a>
+            <a href="https://www.youtube.com/watch?v=sL4F_W1KxZw"><button type="button" class="btn">Abertura Legendada</button></a>
+
         </figure>
         <figure class="col text-center">
             <img src="Rock Lee Vs Gaara.jpg" alt="Luta entre rock lee e gaara" width="300px">
             <figcaption>A luta mais marcante de Naruto Classico</figcaption>
+            <a href="https://www.youtube.com/watch?v=fBMkrYH259g"><button type="button" class="btn">Abertura Dublada</button></a>
+            <a href="https://www.youtube.com/watch?v=4t__wczfpRI"><button type="button" class="btn">Abertura Legendada</button></a>
         </figure>
         <figure class="col text-center">
             <img src="ichigo vs ulquiorra.jpg" alt="Luta entre Ichigo e Ulquiorra" width="300px">
             <figcaption>Melhor transformação de Hollow</figcaption>
+            <a href="https://www.youtube.com/watch?v=tQTfnzRPxhg"><button type="button" class="btn">Abertura Dublada</button></a>
+            <a href="https://www.youtube.com/watch?v=5PzoPPG-W_Q"><button type="button" class="btn">Abertura Legendada</button></a>
         </figure>
         </div>
         <div class="video">
@@ -67,7 +109,7 @@
         </video>
         </div>
     </section>
-     <section class="container-fluid text-bg-secondary">
+     <section class="container-fluid">
         <h2>Lista de Animes</h2>
         <p>Veja o número de episódios dublados e legendados</p>
         <table border>
@@ -86,31 +128,37 @@
             <tr>
                 <td>
                     Dragon Ball Z (291)
+                    <a href="https://www.crunchyroll.com">Asistir</a> 
                 </td>
                 <td>
                     Dragon Ball Z (291)
+                    <a href="https://www.crunchyroll.com">Asistir</a>
                 </td>
             </tr>
             <tr>
                 <td>
                     Naruto Classico (220)
+                <a href="https://www.crunchyroll.com">Asistir</a>
                 </td>
                 <td>
                     Naruto Classico (220)
+                    <a href="https://www.crunchyroll.com">Asistir</a>
                 </td>
             </tr>
             <tr>
                 <td>
                     Bleach (229)
+                    <a href="https://www.crunchyroll.com">Asistir</a>
                 </td>
                 <td>
                     Bleach (366)
+                    <a href="https://www.crunchyroll.com">Asistir</a>
                 </td>
             </tr>
             </tbody>
         </table>
     </section>
-    <section class="container-fluid bg-light">
+    <section>
         <h4></h4>
         <form method="get" action="">
             <fieldset>
@@ -118,6 +166,7 @@
                 <div class="mb-3">
                  <label class="form-label" for="nome">
                 </div>
+                <label>Nome</label> <br>
                 <input type="text" name="nome"><br>
                 <label>Email</label> <br>
                 <input type="email" name="email"><br>
@@ -141,12 +190,34 @@
             <button>Salvar</button><br>
         </form>
     </section>
-    <footer class="container-fluid bg-danger">
+    <footer>
         <p>Desenvolvido por Gustavo Alves</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 </body>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Launch demo modal
+</button>
 
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 </html>
